--- a/template.html
+++ b/template.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+  <!-- TITLE-WILL-BE-HERE-PLEASE -->
+    <title>TITLE-WILL-BE-HERE-PLEASE</title>
+    <meta name="description" content="Metadata-description-will-be-here-please">
+  <!--   SECURITY -->
+    <meta http-equiv="Content-Security-Policy" content="...">
+    <meta name="X-Content-Type-Options" content="nosniff">
+    <meta name="X-Frame-Options" content="DENY">
+    <meta name="Referrer-Policy" content="no-referrer">
+    <meta name="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+  </head>
 
-  <title>TITLE-WILL-BE-HERE-PLEASE</title>
-  <meta name="description" content="Metadata-description-will-be-here-please">
-  
-  <meta http-equiv="Content-Security-Policy" content="...">
-  <meta name="X-Content-Type-Options" content="nosniff">
-  <meta name="X-Frame-Options" content="DENY">
-  <meta name="Referrer-Policy" content="no-referrer">
-  <meta name="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+  <body>
+<!-- TITLE -->
+    <h1 class="title1">TITLE-WILL-BE-HERE-PLEASE</h1>
 
-</head>
-<body>
-<h1 class="title1">TITLE-WILL-BE-HERE-PLEASE</h1>
-<div class="textbox">
+    <div class="textbox">
+<!--       BODY -->
+    </div>
 
-
-
-</div>
 
 <footer>
   <a href="index.html">
-  <img src="images/home.png" alt="home">
+    Home
   </a>
 </footer>
   
