Make it Right for a better Ride

--- a/template.html
+++ b/template.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-  <!-- TITLE-WILL-BE-HERE-PLEASE -->
+    <!-- TITLE-WILL-BE-HERE-PLEASE -->
     <title>TITLE-WILL-BE-HERE-PLEASE</title>
     <meta name="description" content="Metadata-description-will-be-here-please">
-  <!--   SECURITY -->
-    <meta http-equiv="Content-Security-Policy" content="...">
+    <!--   SECURITY -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:;">
     <meta name="X-Content-Type-Options" content="nosniff">
     <meta name="X-Frame-Options" content="DENY">
     <meta name="Referrer-Policy" content="no-referrer">
@@ -16,19 +16,19 @@
   </head>
 
   <body>
-<!-- TITLE -->
+    <!-- TITLE -->
     <h1 class="title1">TITLE-WILL-BE-HERE-PLEASE</h1>
 
     <div class="textbox">
-<!--       BODY -->
+      <!--       BODY -->
     </div>
 
 
-<footer>
-  <a href="index.html">
-    Home
-  </a>
-</footer>
-  
-</body>
+    <footer>
+      <a href="index.html">
+        Home
+      </a>
+    </footer>
+    
+  </body>
 </html>
